force-app/main/default/objects/Deal_Product__c/Deal_Product__c.object-meta.xml
<CustomObject>
    <label>Deal Product</label>
    <pluralLabel>Deal Products</pluralLabel>
    <nameField>
        <label>Deal Product Name</label>
        <displayFormat>DPROD-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>