force-app/main/default/objects/Deal_Product__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <label>Deal</label>
    <type>MasterDetail</type>
    <referenceTo>Deal__c</referenceTo>
    <relationshipOrder>0</relationshipOrder>
    <relationshipName>Deal_Products</relationshipName>
    <relationshipLabel>Deal Products</relationshipLabel>
</CustomField>