force-app/main/default/objects/Deal_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Deal_Products</relationshipName>
    <relationshipLabel>Deal Products</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>