force-app/main/default/objects/Deal_Product__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <label>Total Price</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <formula>Quantity__c * Unit_Price__c * (1 - Discount__c/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>